--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
         "mongodb": "^3.5.7",
         "mongoose": "^5.9.25",
         "rootpath": "^0.1.2",
-        "swagger-ui-express": "^4.1.4",
         "textversionjs": "^1.1.3",
-        "ts-tracking-number": "^1.0.13",
-        "yamljs": "^0.3.0"
+        "ts-tracking-number": "^1.0.13"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
