--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "date-fns": "^2.23.0",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
         "fast-xml-parser": "^3.19.0",
@@ -27,11 +28,14 @@
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.7",
         "mongoose": "^5.9.25",
+        "ramda": "^0.27.1",
         "rootpath": "^0.1.2",
         "textversionjs": "^1.1.3",
+        "ts-shipment-tracking": "^1.1.18",
         "ts-tracking-number": "^1.0.13"
     },
     "devDependencies": {
+        "@types/ramda": "^0.27.44",
         "nodemon": "^2.0.3"
     }
 }
