--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.5.7",
         "mongoose": "^5.9.25",
+        "node-cache": "^5.1.2",
         "ramda": "^0.27.1",
         "rootpath": "^0.1.2",
         "textversionjs": "^1.1.3",
-        "ts-shipment-tracking": "^1.1.18",
+        "ts-shipment-tracking": "^1.1.20",
         "ts-tracking-number": "^1.0.13"
     },
     "devDependencies": {
